# fh-v2

./: .gitignore  bot.py  flask_server.py  pyproject.toml  requirements.txt  tele.bot.py
accounts/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_profile_picture.py
config/: settings.py  urls.py
videos/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
videos/migrations/: 0001_initial.py  0002_favorite_rating.py
